# TFGGII_VACA

./: .env.example  .gitignore  README.md  gui.py  initializer.py  loop.py  main.py  main_loop.py  pyproject.toml
CUA/: cfg.py
CUA/tools/: ClassBrowserUse.py  ClassFlorence.py  ClassScreenAssistant.py  ClassWhisper.py  captionFlorence.py  class_browser_use.py  class_florence.py  class_screen_assistant.py  class_whisper.py  computer.py  endpoint_yolo_florence.py  persistent_sst.py  persistent_stt.py  screenshot.py
CUA/util/: __init__.py  cfg_base.py  logger.py  path.py
MemoriaTFG/: anexos.tex  bibliografia.bib  bibliografiaAnexos.bib  memoria.tex
MemoriaTFG/tex/: 1_Introduccion.tex  2_Objetivos_del_proyecto.tex  3_Conceptos_teoricos.tex  4_Tecnicas_y_herramientas.tex  5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex  6_Trabajos_relacionados.tex  7_Conclusiones_Lineas_de_trabajo_futuras.tex  A_Plan_proyecto.tex  B_Requisitos.tex  C_Diseno.tex  D_Manual_programador.tex  E_Manual_usuario.tex  F_ODS.tex
dockers/: README.txt  endpoint_yolo_florence.py
dockers/Florencev2/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
dockers/Florencev2/florencev2/: ClassFlorence.py
dockers/Florencev2/florencev2/Florence2/: Download model safetensor.txt
dockers/YOLO/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
dockers/YOLO/yolo/: ClassScreenAssistant.py
dockers/yolo-florence/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
dockers/yolo-florence/yolo_florence/: ClassFlorence.py  ClassScreenAssistant.py
tests/: Florence_test.py  master_test.txt  test_001_ScreenAssistant.py  test_002_Florence.py  test_003_Whisper.py  test_004_computer.py  test_005_BrowserUse.py  test_006_loop.py
