[project]
name = "CUA"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai (>=1.65.2,<2.0.0)",
    "langchain-openai (>=0.3.1,<0.3.2)",
    "langchain-anthropic (>=0.3.3,<0.3.4)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "ultralytics (>=8.3.83,<9.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "timm (>=1.0.15,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "wave (>=0.0.2,<0.0.3)",
    "pytest (>=8.3.5,<9.0.0)",
    "browser-use (>=0.1.40,<0.2.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
