[project]
name = "yolo-florence"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Manuel Martinez Garcia",email = "victor.martinez@itcl.es"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "timm (>=1.0.15,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "ultralytics (>=8.3.108,<9.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
